@@ -1,3 +1,9 @@
+2001-03-26  Ben Elliston  <bje@redhat.com>
+
+	* gas-test.scm (<keyword>,test-data): Prefix keywords by their
+	specified prefix and, if necessary, escape `$' in gas-build.sh to
+	prevent unwanted shell variable expansion.
+
 2001-03-24  Ben Elliston  <bje@redhat.com>
 
 	* gas-test.scm (<hw-asm>,test-data): Choose pseudo-random data.
